# human_lower_body_detection_and_following

./: README.md  Sysconlab.xml  silbot_following.launch
leg_detector/: .cproject  .project  CMakeLists.txt  package.xml
leg_detector/cfg/: LegDetector.cfg
leg_detector/include/detector/: HOG_processor.h  calc_leg_features.cpp  extraction_processor.h  laser_processor.cpp
leg_detector/include/svmlight/: SvmLightLib.cpp  SvmLightLib.h  kernel.h
leg_detector/include/tracker/: track_feature.h  tracker_kalman.cpp  tracker_kalman.h
leg_detector/launch/: process.launch  process_hokyo.launch  train.launch
leg_detector/msg/: PositionMeasurement.msg
leg_detector/py/: track_gui.py
leg_detector/src/: HOG_processor.cpp  extraction_processor.cpp  leg_detector.cpp  leg_detector.h  leg_detector_without GUI.cpp
leg_follow/: CMakeLists.txt  package.xml
leg_follow/launch/: robot.launch
leg_follow/src/: leg_follow.cpp  odom_only.cpp  vfh_algorithm.cpp  vfh_algorithm.h
